fix: wrapped the img in button in input-msg and changed the styles of button

--- a/src/atoms/Button/Button.scss
+++ b/src/atoms/Button/Button.scss
@@ -15,6 +15,7 @@ $botton-colors: (
   border: none;
   padding: 0;
   margin: 0;
+  background: inherit;
 
   &_submit-auth {
     width: 233px;
